attempt to fix image height on mobile.

--- a/less/default-mobile.less
+++ b/less/default-mobile.less
@@ -87,7 +87,7 @@
   }
 
   .card-work {
-    height: 80vh;
+    height: 100%;
   }
 
   .card-home-image-right img {
